# ensmallen

./: README.md
include/: ensmallen.hpp
include/ensmallen_bits/ada_bound/: ada_bound.hpp  ada_bound_update.hpp  ams_bound_update.hpp
include/ensmallen_bits/ada_delta/: ada_delta.hpp
include/ensmallen_bits/ada_grad/: ada_grad.hpp
include/ensmallen_bits/adam/: adam.hpp
include/ensmallen_bits/aug_lagrangian/: aug_lagrangian_function.hpp  aug_lagrangian_function_impl.hpp  aug_lagrangian_impl.hpp
include/ensmallen_bits/bigbatch_sgd/: adaptive_stepsize.hpp  backtracking_line_search.hpp  bigbatch_sgd.hpp  bigbatch_sgd_impl.hpp
include/ensmallen_bits/cmaes/: cmaes.hpp  cmaes_impl.hpp  full_selection.hpp  random_selection.hpp
include/ensmallen_bits/cne/: cne.hpp  cne_impl.hpp
include/ensmallen_bits/de/: de.hpp  de_impl.hpp
include/ensmallen_bits/eigen_helper/: Rand.hpp  eigen_helper.hpp
include/ensmallen_bits/eve/: eve.hpp  eve_impl.hpp
include/ensmallen_bits/ftml/: ftml.hpp
include/ensmallen_bits/fw/: constr_lpball.hpp  constr_structure_group.hpp  frank_wolfe.hpp  frank_wolfe_impl.hpp  update_classic.hpp  update_full_correction.hpp
include/ensmallen_bits/gradient_descent/: gradient_descent.hpp  gradient_descent_impl.hpp
include/ensmallen_bits/iqn/: iqn.hpp  (+1 more)
tests/de_test/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  mp
tests/gradient_descent_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mp
tests/lbfgs_test/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  mp
tests/template/: main.cpp
(+114 files in other folders)
